[TN] added basic html/css styling to front page

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,126 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yalam sole proprietor</title>
+    <title>Yalam sole proprietor shop</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    <h1> Hilman Sempai lesson 1!</h1>
+    <h1>Food Order Page</h1>
+    <div class="container-wrapper">
+        <button>&lt;</button>
+        <div class="scroll-container">
+            <div class="scroll-page" id="page-1">Muslim</div>
+            <div class="scroll-page" id="page-2">Western</div>
+            <div class="scroll-page" id="page-3">Chinese</div>
+            <div class="scroll-page" id="page-4">japanese</div>
+            <div class="scroll-page" id="page-5">japanese</div>
+            <div class="scroll-page" id="page-6">japanese</div>
+            <div class="scroll-page" id="page-7">japanese</div>
+            <div class="scroll-page" id="page-8">japanese</div>
+            <div class="scroll-page" id="page-9">japanese</div>
+            <div class="scroll-page" id="page-10">japanese</div>
+            <div class="scroll-page" id="page-11">japanese</div>
+        </div>
+        <button>&gt;</button>
+    </div>
+    <p>Home > Restaurant</p>
+    <h2>Popular Near You</h2>
+    <div class="container-wrapper">
+        <button>&lt;</button>
+            <div class="cards">
+                <article class="card">
+                    <div id="page-12">
+                        <p>
+                            Insert image here
+                        </p>
+                        <div class="content">
+                            <p>
+                                The idea of reaching the North Pole by means of balloons appears to have been
+                                entertained many
+                                years ago.
+                            </p>
+                        </div>
+                    </div>
+                </article>
+                <article class="card">
+                    <div id="page-13">
+                        <p>
+                            Insert image here
+                        </p>
+                        <div class="content">
+                            <p>
+                                The idea of reaching the North Pole by means of balloons appears to have been
+                                entertained many
+                                years ago.
+                            </p>
+                        </div>
+                    </div>
+                </article>
+                <article class="card">
+                    <div id="page-14">
+                        <p>
+                            Insert image here
+                        </p>
+                        <div class="content">
+                            <p>
+                                The idea of reaching the North Pole by means of balloons appears to have been
+                                entertained many
+                                years ago.
+                            </p>
+                        </div>
+                    </div>
+                </article>
+                <article class="card">
+                    <div id="page-15">
+                        <p>
+                            Insert image here
+                        </p>
+                        <div class="content">
+                            <p>
+                                The idea of reaching the North Pole by means of balloons appears to have been
+                                entertained many
+                                years ago.
+                            </p>
+                        </div>
+                    </div>
+                </article>
+                <article class="card">
+                    <div id="page-16">
+                        <p>
+                            Insert image here
+                        </p>
+                        <div class="content">
+                            <p> Why can't you just make a class/ function for recursive code? </p>
+                        </div>
+                    </div>
+                </article>
+                <article class="card">
+                    <div id="page-17">
+                        <p>
+                            Insert image here
+                        </p>
+                        <div class="content">
+                            <p> Jerome needs help with class Inheritence or he gonna fail his exam on Friday </p>
+                        </div>
+                    </div>
+                </article>
+                <article class="card">
+                    <div id="page-17">
+                        <p>
+                            Insert image here
+                        </p>
+                        <div class="content">
+                            <p> Jerome needs help with class Inheritence or he gonna fail his exam on Friday </p>
+                        </div>
+                    </div>
+                </article>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
