[TN] worked on html/css

--- a/src/index.html
+++ b/src/index.html
@@ -46,105 +46,28 @@
             </div>
         </section>
 
+
+        <hr id="divider"></hr>
+
         <!-- Shops -->
-        <section id="selection">
+        <section id="popular-shops">
             <div class="breadcrumbs">
                 <p>Home > Restaurant</p>
                 <h2>Popular Near You</h2>
             </div>
+
             <div class="container-wrapper">
                 <button>&lt;</button>
-                <div class="cards">
-                    <article class="card">
-                        <div id="page-12">
-                            <p>
-                                Insert image here
-                            </p>
-                            <div class="content">
-                                <p>
-                                    The idea of reaching the North Pole by means of balloons appears to have been
-                                    entertained many
-                                    years ago.
-                                </p>
-                            </div>
-                        </div>
-                    </article>
-                    <article class="card">
-                        <div id="page-13">
-                            <p>
-                                Insert image here
-                            </p>
-                            <div class="content">
-                                <p>
-                                    The idea of reaching the North Pole by means of balloons appears to have been
-                                    entertained many
-                                    years ago.
-                                </p>
-                            </div>
-                        </div>
-                    </article>
-                    <article class="card">
-                        <div id="page-14">
-                            <p>
-                                Insert image here
-                            </p>
-                            <div class="content">
-                                <p>
-                                    The idea of reaching the North Pole by means of balloons appears to have been
-                                    entertained many
-                                    years ago.
-                                </p>
-                            </div>
-                        </div>
-                    </article>
-                    <article class="card">
-                        <div id="page-15">
-                            <p>
-                                Insert image here
-                            </p>
-                            <div class="content">
-                                <p>
-                                    The idea of reaching the North Pole by means of balloons appears to have been
-                                    entertained many
-                                    years ago.
-                                </p>
-                            </div>
-                        </div>
-                    </article>
-                    <article class="card">
-                        <div id="page-16">
-                            <p>
-                                Insert image here
-                            </p>
-                            <div class="content">
-                                <p> Why can't you just make a class/ function for recursive code? </p>
-                            </div>
-                        </div>
-                    </article>
-                    <article class="card">
-                        <div id="page-17">
-                            <p>
-                                Insert image here
-                            </p>
-                            <div class="content">
-                                <p> Jerome needs help , he spends more money on a weapon than his waifu &lt;/3 </p>
-                            </div>
-                        </div>
-                    </article>
-                    <article class="card">
-                        <div id="page-18">
-                            <p>
-                                Insert image here
-                            </p>
-                            <div class="content">
-                                <p> Jerome needs help with managing his money </p>
-                            </div>
-                        </div>
-                    </article>
+                <div class="cards" id="popular-shops-cards">
                 </div>
+                <button>&gt;</button>
             </div>
         </section>
     </main>
+
+    <!-- Scripts -->
+    <script type="module" src="data.js"></script>
+    <script type="module" src="shops.js"></script>
 </body>
 
 </html>
